# Xro_Version

./: .gitignore  .mxproject  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  STM32F407XX_FLASH.ld  basic_framework.ioc  compile.ps1  findings.md  progress.md  task_plan.md  xrobot-agent-context.md
.Doc/: 2026-04-21_dt7_vt13_dual_remote_migration_plan.md  2026-04-21_motor_migration_route_correction.md  2026-04-21_phase2_to_phase5_execution_cards.md  2026-04-21_phase4_phase6_fan_in_fan_out_execution_plan.md  2026-04-21_rmpp_input_chain_fan_in_fan_out_research.md  2026-04-21_shoot_chassis_real_actuation_next_plan.md  2026-04-22_pitch_board_validation.md  2026-04-22_remaining_fan_in_fan_out_execution_plan.md  basic_framework_to_xrobot_migration_plan.md  basic_framework_xrobot_execution_blueprint.md  crystalline-humming-reef.md  pitch_online_enable_feedback_ready.gdb  real_remote_imu_motor_fanout_plan.md  road_map.md  session_summary_and_shoot_chassis_next_plan.md  start_pitch_jlink_gdbserver.ps1
App/: CLAUDE.md  CMakeLists.txt
App/Bridge/: MasterMachineBridgeController.hpp
App/Chassis/: ChassisControlMath.hpp  ChassisController.cpp  ChassisController.hpp  ChassisMotorPowerModel.hpp  ChassisPowerController.hpp  ChassisPowerLimiter.hpp
App/Cmd/: DecisionController.cpp  DecisionController.hpp  InputController.cpp  InputController.hpp  MasterMachineBridgeController.cpp  MasterMachineBridgeController.hpp  OperatorInputSnapshot.hpp  RefereeConstraintView.hpp  RemoteInputMapper.hpp
App/Config/: AppConfig.hpp  BridgeConfig.hpp  ChassisConfig.hpp  GimbalConfig.hpp  InputConfig.hpp  RefereeConfig.hpp  ShootConfig.hpp
App/Gimbal/: GimbalController.cpp  GimbalController.hpp  GimbalMath.hpp
App/Health/: HealthController.cpp  HealthController.hpp
App/Referee/: RefereeConstraintView.hpp
App/Robot/: AppRuntime.cpp  AppRuntime.hpp  ControllerBase.cpp  ControllerBase.hpp
App/Shoot/: ShootController.cpp  ShootController.hpp
App/Topics/: AimCommand.hpp  ChassisBoardBridge.hpp  ChassisState.hpp  FireCommand.hpp  GimbalState.hpp  InsState.hpp  MotionCommand.hpp  RobotMode.hpp  ShootState.hpp  SystemHealth.hpp
Core/: CLAUDE.md
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  can.c  dac.c  dma.c  freertos.c  freertos_heap.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c  usb_otg.c
Modules/: CLAUDE.md  modules.yaml  sources.yaml
Modules/BMI088/: BMI088.hpp  BMI088Calibration.hpp
Modules/CANBridge/: CANBridge.hpp  CMakeLists.txt  README.md
Modules/DJIMotor/: CMakeLists.txt  DJIMotor.hpp  README.md
Modules/DMMotor/: CMakeLists.txt  DMMotor.hpp  README.md
Modules/DT7/: CMakeLists.txt  DT7.hpp  README.md
Modules/INS/: CMakeLists.txt  INS.hpp  QuaternionInsEstimator.hpp  README.md
Modules/MasterMachine/: CMakeLists.txt  MasterMachine.hpp  README.md
Modules/RLS/: CMakeLists.txt  README.md  RLS.hpp
Modules/Referee/: CMakeLists.txt  README.md  Referee.hpp
Modules/RemoteControl/: DT7.hpp  VT13.hpp
Modules/SMC/: CMakeLists.txt  (+2 more)
User/: CLAUDE.md  app_main.cpp  libxr_config.yaml  xrobot.yaml  xrobot_main.hpp
cmake/: LibXR.CMake
docs/: xrobot-lite-architecture.md  xrobot-lite-followups.md
tests/: bmi088_gyro_calibration_static_test.cpp  can_bridge_can_comm_regression.py  chassis_power_model_regression.py  gimbal_protocol_math_regression.py  motor_module_safety_regression.py  referee_module_regression.py  shoot_input_request_regression.py
tests/host/: CMakeLists.txt  chassis_follow_gimbal_math_test.cpp  gimbal_protocol_math_test.cpp  ins_quaternion_estimator_test.cpp  remote_input_mapping_test.cpp
(+13 files in other folders)
